--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <!-- 左侧按钮式导航 -->
 <nav class="SideNav">
+    <a href="#Welcome"           class="NavButton" data-color="#16a085"><span class="NavIcon">🏠</span><span class="NavText">主页</span></a>
     <a href="#SelfIntro"         class="NavButton" data-color="#2ecc71"><span class="NavIcon">👤</span><span class="NavText">自我介绍</span></a>
     <a href="#Skills"            class="NavButton" data-color="#3498db"><span class="NavIcon">🚀</span><span class="NavText">个人优势</span></a>
     <a href="#WorkExperience"    class="NavButton" data-color="#e74c3c"><span class="NavIcon">🏢</span><span class="NavText">工作经历</span></a>
@@ -21,66 +22,188 @@
 <!-- 右侧滚动内容 -->
 <main class="ContentArea" id="ContentArea">
 
+    <section class="SnapSection" id="Welcome">
+        <p style="font-size: 1.4rem; line-height: 2rem; max-width: 960px; margin: 0 auto 6vh; text-align: center;">
+            我是张靖宇，一名专注于 <strong>Unreal Engine 插件开发</strong> 和 <strong>技术自动化</strong> 的开发者，擅长将复杂问题模块化、结构化。多年来服务于 VR、军事仿真、AI 交互等多个前沿项目，具有丰富的一线开发与系统架构经验。现以自由开发者身份接项目，目标是打造高质量、高适配度的技术组件。
+        </p>
+    </section>
+
+
     <section id="SelfIntro" class="SnapSection">
-        <h1>👤 自我介绍</h1>
+        <h2>👤 自我介绍</h2>
         <ul>
             <li><strong>姓名：</strong>张靖宇</li>
-            <li><strong>年龄：</strong>28 岁</li>
+            <li><strong>性别：</strong>男</li>
             <li><strong>籍贯：</strong>山西运城</li>
-            <li><strong>工作经验：</strong>7 年</li>
-            <li><strong>邮箱：</strong><a href="mailto:mengzhishanghun@outlook.com" class="EmailLink">mengzhishanghun@outlook.com</a></li>
-            <li><strong>意向方向：</strong>Unreal Engine 插件开发 / 项目外包合作</li>
+            <li><strong>年龄：</strong><span id="Age"></span> 岁</li>
+            <li><strong>工作经验：</strong><span id="WorkYears"></span> 年</li>
+            <li><strong>联系邮箱：</strong><a href="mailto:mengzhishanghun@outlook.com" class="EmailLink">mengzhishanghun@outlook.com</a></li>
         </ul>
     </section>
 
     <section id="Skills" class="SnapSection">
         <h2>🚀 个人优势</h2>
         <ul>
-            <li>精通 C++ / Python，算法基础扎实，擅长底层技术攻关</li>
-            <li>深入理解 TCP/IP、HTTP、FTP、SSH 等协议及插件开发</li>
-            <li>熟练 MySQL、Oracle，善于处理复杂数据</li>
-            <li>精通 Git / SVN / Perforce，熟悉 CI/CD</li>
-            <li>深度掌握 UE4/5，蓝图、Gameplay、MassAI、CommonUI</li>
-            <li>丰富 VR/AR 设备集成与性能优化经验</li>
-            <li>熟悉 ChatGPT、语音识别、数字人等 AI 技术集成</li>
+            <li><strong>精通 C++ 编程</strong>，具备扎实的数学、数据结构和算法基础，能高效解决底层性能与逻辑难题</li>
+            <li><strong>深入理解 TCP/IP 协议栈</strong>，能独立开发 UE 插件并完成 TCP、UDP、SSH、HTTP 等通信功能的集成</li>
+            <li><strong>Python 编程经验丰富</strong>，擅长脚本自动化、工具链开发，能快速构建开发辅助系统</li>
+            <li><strong>熟练使用 MySQL、Oracle 等数据库</strong>，能够编写高效查询，设计稳定的数据交互结构</li>
+            <li><strong>掌握 VS、Rider、CLion 等主流 IDE</strong>，熟悉断点调试、性能分析与代码质量控制</li>
+            <li><strong>了解 ChatGPT 应用逻辑与前端 AI 接口</strong>，可结合大模型提升生产力与用户体验</li>
+            <li><strong>版本管理能力强</strong>，精通 Git / SVN / Perforce，熟悉多人协作与权限配置流程</li>
+            <li><strong>VR 硬件适配经验丰富</strong>，熟悉 Vive、Oculus、Pico 等主流设备部署与性能调优</li>
+            <li><strong>精通 UE4 / UE5 引擎架构</strong>，熟悉渲染流程、插件机制、Windows / Android 打包与热更</li>
+            <li><strong>熟悉 Gameplay 架构与组件系统</strong>，能够快速构建 VR 游戏流程，集成 Common UI 与 MassAI</li>
+            <li><strong>独立完成多个商业插件开发</strong>，涵盖通信、打包、UI 管理、自动化工具等，具备 Fab 上架经验</li>
+            <li><strong>具备虚拟人技术经验</strong>，熟悉 MetaHuman、动作捕捉、Lipsync 与虚拟拍摄流程</li>
+            <li><strong>掌握性能优化与网络同步</strong>，熟悉源码修改、蓝图逻辑分离、调度优化等高级实践</li>
         </ul>
     </section>
 
+
     <section id="WorkExperience" class="SnapSection">
         <h2>🏢 工作经历</h2>
-        <h3>北京尼诺时空文化科技有限公司（2023.02 – 2025.01）</h3>
-        <ul><li>负责项目架构、插件开发、引擎源码升级优化</li></ul>
-        <h3>北京弘宇飞拓科技（2021.07 – 2023.01）</h3>
-        <ul><li>主导 VR 军事项目，完成训练模块与设备对接</li></ul>
-        <h3>北京悠米互动娱乐科技（2018.08 – 2021.02）</h3>
-        <ul><li>手游《救赎之地》核心系统开发（技能、交互、跳伞等）</li></ul>
+
+        <h3>北京尼诺时空文化科技有限公司</h3>
+        <p><strong>职位：</strong>Unreal 开发工程师 ｜<em>2023.02 – 2025.01</em></p>
+        <ul>
+            <li>主导搭建项目架构与底层逻辑，实现流程与功能模块解耦</li>
+            <li>为美术组和程序组提供 UE 插件与 Python 脚本工具，显著提升协作效率</li>
+            <li>完成引擎版本升级与 UE 源码定制化修改，适配多平台需求</li>
+            <li>负责项目的打包、部署与版本发布流程管理</li>
+        </ul>
+
+        <h3>北京弘宇飞拓科技有限公司 成都分公司</h3>
+        <p><strong>职位：</strong>Unreal 开发工程师 ｜<em>2021.07 – 2023.01</em></p>
+        <ul>
+            <li>主导多个 VR 军事模拟与航空训练项目，从需求对接到功能实现全流程负责</li>
+            <li>实现训练模块、设备互动、飞行数据采集等核心逻辑</li>
+            <li>编写项目级技术框架，标准化接口与流程，支持多人协作与模块复用</li>
+        </ul>
+
+        <h3>北京悠米互动娱乐科技有限公司</h3>
+        <p><strong>职位：</strong>Unreal 开发工程师 ｜<em>2018.08 – 2021.02</em></p>
+        <ul>
+            <li>核心参与 MOBA+吃鸡手游《救赎之地》的 UE 客户端系统开发</li>
+            <li>主导战斗系统、技能逻辑、交互模块、跳伞与同步系统的实现</li>
+            <li>优化客户端性能，提升渲染效率与操作流畅性</li>
+        </ul>
     </section>
 
     <section id="ProjectExperience" class="SnapSection">
         <h2>📂 项目经历</h2>
-        <ul>
-            <li><strong>驾考模拟器：</strong>接入 XVP 物理模型、MetaHuman、MassAI，三屏联动</li>
-            <li><strong>海洋船舶模拟：</strong>动态风浪、虚拟拍摄、远程船只控制</li>
-            <li><strong>AI 数字人：</strong>本地语音识别 + 大模型 + TTS + 动作捕捉</li>
-            <li><strong>商飞展示系统：</strong>DataTable + ISM 自动生成飞机结构，可交互编辑</li>
-            <li><strong>军事 VR 项目：</strong>导弹、航母、无人机流程演示</li>
-        </ul>
+        <div class="ProjectCarousel">
+            <button class="ProjectNav" id="ProjectPrev">❮</button>
+            <div class="ProjectSlides" id="ProjectSlides">
+
+                <div class="ProjectCard">
+                    <h3>驾考模拟器自主学习系统（2023.02–2025.01）</h3>
+                    <ul>
+                        <li>配合六轴模拟器实现学员自主学习，目标为帮助通过驾考</li>
+                        <li>使用芬兰团队 XVP 车辆物理模型，模拟真实操作反馈</li>
+                        <li>主导搭建项目基础架构，将蓝图流程与底层逻辑彻底分离</li>
+                        <li>自研插件并接入 MassAI 和 MetaHuman，模拟真实路人环境</li>
+                        <li>改写引擎源码以实现三屏 Lumen 正常显示并修复曝光不一致问题</li>
+                        <li>成功接入 Common UI 模块，提升 UI 管理效率</li>
+                        <li>使用 LevelSequence 记录车辆运动轨迹并还原教学行为</li>
+                        <li>搭建教学流程录制/还原系统，结合 UI 文本和视频展示</li>
+                        <li>使用 UE 网络同步实现三机三屏联动渲染（最终未部署）</li>
+                    </ul>
+                </div>
+
+                <div class="ProjectCard">
+                    <h3>海洋及船舶模拟系统（2024.05–2024.08）</h3>
+                    <ul>
+                        <li>二次开发海洋插件，支持根据风力动态调整海浪参数</li>
+                        <li>实现船舶与海洋的运动记录与回放</li>
+                        <li>开发虚拟拍摄系统：结合 SteamVR、HTC、3D 打印控制器控制虚拟摄影机</li>
+                        <li>摄影系统支持打点、回放、录制、还原、移动速度调整等功能</li>
+                        <li>通过 LiveLink 将实时拍摄画面推送至平板供导演监控</li>
+                        <li>编写控制系统 UI，可动态调整风、天空、云层、时间、船舶质量等参数</li>
+                        <li>支持通过外接设备远程控制船舶的运动方向和转向</li>
+                    </ul>
+                </div>
+
+                <div class="ProjectCard">
+                    <h3>AI 数字人交互演示（2023.03–2023.05）</h3>
+                    <ul>
+                        <li>主导数字人演示系统，基于 MetaHuman + ChatGLM</li>
+                        <li>初期构建远程 AI 问答流程：语音识别 → Chat → 语音合成 → 播放嘴型</li>
+                        <li>后期全部流程本地部署（ChatGLM + pyttsx3 + whisper）</li>
+                        <li>使用 Python + BAT 实现一键启动所有服务</li>
+                        <li>结合 Kinect + ControlRig 实现人体姿态捕捉，支持头部和眼神追踪</li>
+                    </ul>
+                </div>
+
+                <div class="ProjectCard">
+                    <h3>北京商飞 - 飞机模型演示系统（2022.08–2023.01）</h3>
+                    <ul>
+                        <li>使用 DataTable + InstancedStaticMesh 实现飞机自动生成与结构可视化</li>
+                        <li>支持交互式参数修改与装备选择</li>
+                        <li>自动生成过程支持用户自定义结构参数调整，提高开发效率</li>
+                    </ul>
+                </div>
+
+                <div class="ProjectCard">
+                    <h3>北京陆军航空兵学院 - VR 训练系统（2021.09–2022.09）</h3>
+                    <ul>
+                        <li>为教学课目编写训练逻辑，实现学员端与教员端联动控制</li>
+                        <li>接入飞行模拟器数据、支持实时同步学员操作与心率监控</li>
+                    </ul>
+                </div>
+
+                <div class="ProjectCard">
+                    <h3>沈阳航空601所 - 无人机航母演示（2021.08–2021.10）</h3>
+                    <ul>
+                        <li>使用 LevelSequence 录制无人机起降、补给、维修完整流程</li>
+                        <li>制作高质量航母 VR 展示视频，支持站位交互和自由视角切换</li>
+                    </ul>
+                </div>
+
+                <div class="ProjectCard">
+                    <h3>北京航空301所 - 导弹演示系统（2021.07–2021.08）</h3>
+                    <ul>
+                        <li>构建交互式军事基地，展示导弹结构与发射流程</li>
+                        <li>使用 Timeline + Niagara 模拟发射路径与爆炸效果</li>
+                    </ul>
+                </div>
+
+                <div class="ProjectCard">
+                    <h3>《救赎之地》（2018–2021）</h3>
+                    <ul>
+                        <li><strong>英雄技能模块</strong>：技能释放、冷却、隐藏、锁定逻辑</li>
+                        <li><strong>战斗伤害系统</strong>：伤害计算、死亡判定、减伤增伤机制</li>
+                        <li><strong>掉落系统</strong>：场景内掉落与拾取逻辑</li>
+                        <li><strong>交互系统</strong>：场景物品交互，如开门、开关、激活器等</li>
+                        <li><strong>坐骑系统</strong>：坐骑控制与角色同步机制</li>
+                        <li><strong>跳伞系统</strong>：实现单人 / 组队跳伞 + 同步跟随逻辑</li>
+                    </ul>
+                </div>
+            </div>
+            <button class="ProjectNav" id="ProjectNext">❯</button>
+        </div>
     </section>
 
     <section id="Education" class="SnapSection">
         <h2>🎓 教育背景</h2>
         <p><strong>重庆电子工程职业学院（2015 – 2018）</strong><br/>嵌入式技术与应用</p>
+        <ul>
+            <li>主修课程：C语言程序设计、数据结构、网络通信技术、计算机硬件基础、电子技术、汇编语言程序设计</li>
+            <li>在校期间参与智能小车比赛、嵌入式项目开发，打下扎实基础</li>
+            <li>毕业设计：基于安卓与数据库的管理系统开发，涉及客户端界面设计与数据交互</li>
+        </ul>
     </section>
 
     <section id="Cooperation" class="SnapSection">
         <h2>🤝 合作说明</h2>
         <ul>
-            <li>可承接插件开发、工具制作、外包模块或项目原型</li>
-            <li>支持按功能 / 周期定制，保证交付质量</li>
+            <li>可承接 <strong>UE 插件开发</strong>、<strong>蓝图 → C++ 转换</strong>、<strong>Python脚本开发</strong> 等任务</li>
+            <li>支持按功能 / 周期定制，可签订 NDA 与交付协议</li>
+            <li>交付内容包含源码 + 使用说明，确保交付后可维护性</li>
+            <li>提供长期技术支持与版本升级服务</li>
             <li>联系邮箱：<a href="mailto:mengzhishanghun@outlook.com" class="EmailLink">mengzhishanghun@outlook.com</a></li>
         </ul>
     </section>
-
 </main>
 
 <script src="Script.js"></script>
