--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 <main class="ContentArea" id="ContentArea">
 
     <section class="SnapSection" id="Welcome">
-        <p style="font-size: 1.4rem; line-height: 2rem; max-width: 960px; margin: 0 auto 6vh; text-align: center;">
-            我是张靖宇，一名专注于 <strong>Unreal Engine 插件开发</strong> 和 <strong>技术自动化</strong> 的开发者，擅长将复杂问题模块化、结构化。多年来服务于 VR、军事仿真、AI 交互等多个前沿项目，具有丰富的一线开发与系统架构经验。现以自由开发者身份接项目，目标是打造高质量、高适配度的技术组件。
-        </p>
+        <div class="WelcomeContent">
+        <p>我是张靖宇，一名专注于 <strong>Unreal Engine 插件开发</strong> 和 <strong>技术自动化</strong> 的开发者。</p>
+        <p>擅长将复杂问题模块化、结构化，曾服务于 VR、军事仿真、AI 交互等多个前沿项目，具有丰富的一线开发与系统架构经验。</p>
+        <p>现以自由开发者身份承接项目，目标是打造高质量、高适配度的技术组件。</p>
+    </div>
     </section>
 
 
@@ -186,12 +188,9 @@
 
     <section id="Education" class="SnapSection">
         <h2>🎓 教育背景</h2>
-        <p><strong>重庆电子工程职业学院（2015 – 2018）</strong><br/>嵌入式技术与应用</p>
-        <ul>
-            <li>主修课程：C语言程序设计、数据结构、网络通信技术、计算机硬件基础、电子技术、汇编语言程序设计</li>
-            <li>在校期间参与智能小车比赛、嵌入式项目开发，打下扎实基础</li>
-            <li>毕业设计：基于安卓与数据库的管理系统开发，涉及客户端界面设计与数据交互</li>
-        </ul>
+        <h3>重庆电子工程职业学院（2015 – 2018）</h3>
+        <p>专业：嵌入式技术与应用</p>
+        <p>主修课程：C语言程序设计、数据结构、网络通信技术、计算机硬件基础、电子技术、汇编语言程序设计</p>
     </section>
 
     <section id="Cooperation" class="SnapSection">
