--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="SnapSection" id="Welcome">
         <div class="WelcomeContent">
-        <p>我是张靖宇，一名专注于 <strong>Unreal Engine 插件开发</strong> 和 <strong>技术自动化</strong> 的开发者。</p>
+        <p>我是张靖宇，一名专注于 Unreal Engine 插件开发 和 技术自动化 的开发者。</p>
         <p>擅长将复杂问题模块化、结构化，曾服务于 VR、军事仿真、AI 交互等多个前沿项目，具有丰富的一线开发与系统架构经验。</p>
         <p>现以自由开发者身份承接项目，目标是打造高质量、高适配度的技术组件。</p>
     </div>
@@ -34,31 +34,31 @@
     <section id="SelfIntro" class="SnapSection">
         <h2>👤 自我介绍</h2>
         <ul>
-            <li><strong>姓名：</strong>张靖宇</li>
-            <li><strong>性别：</strong>男</li>
-            <li><strong>籍贯：</strong>山西运城</li>
-            <li><strong>年龄：</strong><span id="Age"></span> 岁</li>
-            <li><strong>工作经验：</strong><span id="WorkYears"></span> 年</li>
-            <li><strong>联系邮箱：</strong><a href="mailto:mengzhishanghun@outlook.com" class="EmailLink">mengzhishanghun@outlook.com</a></li>
+            <li>姓名：张靖宇</li>
+            <li>性别：男</li>
+            <li>籍贯：山西运城</li>
+            <li>年龄：<span id="Age"></span> 岁</li>
+            <li>工作经验：<span id="WorkYears"></span> 年</li>
+            <li>联系邮箱：<a href="mailto:mengzhishanghun@outlook.com" class="EmailLink">mengzhishanghun@outlook.com</a></li>
         </ul>
     </section>
 
     <section id="Skills" class="SnapSection">
         <h2>🚀 个人优势</h2>
         <ul>
-            <li><strong>精通 C++ 编程</strong>，具备扎实的数学、数据结构和算法基础，能高效解决底层性能与逻辑难题</li>
-            <li><strong>深入理解 TCP/IP 协议栈</strong>，能独立开发 UE 插件并完成 TCP、UDP、SSH、HTTP 等通信功能的集成</li>
-            <li><strong>Python 编程经验丰富</strong>，擅长脚本自动化、工具链开发，能快速构建开发辅助系统</li>
-            <li><strong>熟练使用 MySQL、Oracle 等数据库</strong>，能够编写高效查询，设计稳定的数据交互结构</li>
-            <li><strong>掌握 VS、Rider、CLion 等主流 IDE</strong>，熟悉断点调试、性能分析与代码质量控制</li>
-            <li><strong>了解 ChatGPT 应用逻辑与前端 AI 接口</strong>，可结合大模型提升生产力与用户体验</li>
-            <li><strong>版本管理能力强</strong>，精通 Git / SVN / Perforce，熟悉多人协作与权限配置流程</li>
-            <li><strong>VR 硬件适配经验丰富</strong>，熟悉 Vive、Oculus、Pico 等主流设备部署与性能调优</li>
-            <li><strong>精通 UE4 / UE5 引擎架构</strong>，熟悉渲染流程、插件机制、Windows / Android 打包与热更</li>
-            <li><strong>熟悉 Gameplay 架构与组件系统</strong>，能够快速构建 VR 游戏流程，集成 Common UI 与 MassAI</li>
-            <li><strong>独立完成多个商业插件开发</strong>，涵盖通信、打包、UI 管理、自动化工具等，具备 Fab 上架经验</li>
-            <li><strong>具备虚拟人技术经验</strong>，熟悉 MetaHuman、动作捕捉、Lipsync 与虚拟拍摄流程</li>
-            <li><strong>掌握性能优化与网络同步</strong>，熟悉源码修改、蓝图逻辑分离、调度优化等高级实践</li>
+            <li>精通 C++ 编程，具备扎实的数学、数据结构和算法基础，能高效解决底层性能与逻辑难题</li>
+            <li>深入理解 TCP/IP 协议栈，能独立开发 UE 插件并完成 TCP、UDP、SSH、HTTP 等通信功能的集成</li>
+            <li>Python 编程经验丰富，擅长脚本自动化、工具链开发，能快速构建开发辅助系统</li>
+            <li>熟练使用 MySQL、Oracle 等数据库，能够编写高效查询，设计稳定的数据交互结构</li>
+            <li>掌握 VS、Rider、CLion 等主流 IDE，熟悉断点调试、性能分析与代码质量控制</li>
+            <li>了解 ChatGPT 应用逻辑与前端 AI 接口，可结合大模型提升生产力与用户体验</li>
+            <li>版本管理能力强，精通 Git / SVN / Perforce，熟悉多人协作与权限配置流程</li>
+            <li>VR 硬件适配经验丰富，熟悉 Vive、Oculus、Pico 等主流设备部署与性能调优</li>
+            <li>精通 UE4 / UE5 引擎架构，熟悉渲染流程、插件机制、Windows / Android 打包与热更</li>
+            <li>熟悉 Gameplay 架构与组件系统，能够快速构建 VR 游戏流程，集成 Common UI 与 MassAI</li>
+            <li>独立完成多个商业插件开发，涵盖通信、打包、UI 管理、自动化工具等，具备 Fab 上架经验</li>
+            <li>具备虚拟人技术经验，熟悉 MetaHuman、动作捕捉、Lipsync 与虚拟拍摄流程</li>
+            <li>掌握性能优化与网络同步，熟悉源码修改、蓝图逻辑分离、调度优化等高级实践</li>
         </ul>
     </section>
 
@@ -67,7 +67,7 @@
         <h2>🏢 工作经历</h2>
 
         <h3>北京尼诺时空文化科技有限公司</h3>
-        <p><strong>职位：</strong>Unreal 开发工程师 ｜<em>2023.02 – 2025.01</em></p>
+        <p>职位：Unreal 开发工程师 ｜<em>2023.02 – 2025.01</em></p>
         <ul>
             <li>主导搭建项目架构与底层逻辑，实现流程与功能模块解耦</li>
             <li>为美术组和程序组提供 UE 插件与 Python 脚本工具，显著提升协作效率</li>
@@ -76,7 +76,7 @@
         </ul>
 
         <h3>北京弘宇飞拓科技有限公司 成都分公司</h3>
-        <p><strong>职位：</strong>Unreal 开发工程师 ｜<em>2021.07 – 2023.01</em></p>
+        <p>职位：Unreal 开发工程师 ｜<em>2021.07 – 2023.01</em></p>
         <ul>
             <li>主导多个 VR 军事模拟与航空训练项目，从需求对接到功能实现全流程负责</li>
             <li>实现训练模块、设备互动、飞行数据采集等核心逻辑</li>
@@ -84,7 +84,7 @@
         </ul>
 
         <h3>北京悠米互动娱乐科技有限公司</h3>
-        <p><strong>职位：</strong>Unreal 开发工程师 ｜<em>2018.08 – 2021.02</em></p>
+        <p>职位：Unreal 开发工程师 ｜<em>2018.08 – 2021.02</em></p>
         <ul>
             <li>核心参与 MOBA+吃鸡手游《救赎之地》的 UE 客户端系统开发</li>
             <li>主导战斗系统、技能逻辑、交互模块、跳伞与同步系统的实现</li>
@@ -173,12 +173,12 @@
                 <div class="ProjectCard">
                     <h3>《救赎之地》（2018–2021）</h3>
                     <ul>
-                        <li><strong>英雄技能模块</strong>：技能释放、冷却、隐藏、锁定逻辑</li>
-                        <li><strong>战斗伤害系统</strong>：伤害计算、死亡判定、减伤增伤机制</li>
-                        <li><strong>掉落系统</strong>：场景内掉落与拾取逻辑</li>
-                        <li><strong>交互系统</strong>：场景物品交互，如开门、开关、激活器等</li>
-                        <li><strong>坐骑系统</strong>：坐骑控制与角色同步机制</li>
-                        <li><strong>跳伞系统</strong>：实现单人 / 组队跳伞 + 同步跟随逻辑</li>
+                        <li>英雄技能模块：技能释放、冷却、隐藏、锁定逻辑</li>
+                        <li>战斗伤害系统：伤害计算、死亡判定、减伤增伤机制</li>
+                        <li>掉落系统：场景内掉落与拾取逻辑</li>
+                        <li>交互系统：场景物品交互，如开门、开关、激活器等</li>
+                        <li>坐骑系统：坐骑控制与角色同步机制</li>
+                        <li>跳伞系统：实现单人 / 组队跳伞 + 同步跟随逻辑</li>
                     </ul>
                 </div>
             </div>
@@ -196,7 +196,7 @@
     <section id="Cooperation" class="SnapSection">
         <h2>🤝 合作说明</h2>
         <ul>
-            <li>可承接 <strong>UE 插件开发</strong>、<strong>蓝图 → C++ 转换</strong>、<strong>Python脚本开发</strong> 等任务</li>
+            <li>可承接 UE 插件开发、蓝图 → C++ 转换、Python脚本开发 等任务</li>
             <li>支持按功能 / 周期定制，可签订 NDA 与交付协议</li>
             <li>交付内容包含源码 + 使用说明，确保交付后可维护性</li>
             <li>提供长期技术支持与版本升级服务</li>
