添加作品展示模块

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- 左侧按钮式导航 -->
 <nav class="SideNav">
     <a href="#Welcome"           class="NavButton" data-color="#16a085"><span class="NavIcon">🏠</span><span class="NavText">主页</span></a>
-    <a href="#Showcase"          class="NavButton" data-color="#16a085"><span class="NavIcon">📦</span><span class="NavText">成果展示</span></a>
+    <a href="#Showcase"          class="NavButton" data-color="#16a085"><span class="NavIcon">📦</span><span class="NavText">作品展示</span></a>
     <a href="#SelfIntro"         class="NavButton" data-color="#2ecc71"><span class="NavIcon">👤</span><span class="NavText">自我介绍</span></a>
     <a href="#Skills"            class="NavButton" data-color="#3498db"><span class="NavIcon">🚀</span><span class="NavText">个人优势</span></a>
     <a href="#WorkExperience"    class="NavButton" data-color="#e74c3c"><span class="NavIcon">🏢</span><span class="NavText">工作经历</span></a>
