--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
         <div class="ProjectCarousel">
             <button class="ProjectNav" id="ProjectPrev">❮</button>
             <div class="ProjectSlides" id="ProjectSlides">
-
                 <div class="ProjectCard">
                     <h3>驾考模拟器自主学习系统（2023.02–2025.01）</h3>
+                    <p> 科目二三模拟考试教学系统，模拟教练教学帮助用户通过实际考试。</p>
+                    <p> 我负责程序架构，整体流程搭建，为美术、开发提供技术支持，引擎版本升级。</p>
                     <ul>
                         <li>配合六轴模拟器实现学员自主学习，目标为帮助通过驾考</li>
                         <li>使用芬兰团队 XVP 车辆物理模型，模拟真实操作反馈</li>
@@ -168,6 +169,8 @@
 
                 <div class="ProjectCard">
                     <h3>海洋及船舶模拟系统（2024.05–2024.08）</h3>
+                    <p> 为剧组搭建海洋船舶模拟系统和虚拟拍照系统。</p>
+                    <p> 我负责程序架构，整体流程搭建，虚拟拍摄演示，现场开发，引擎版本升级。</p>
                     <ul>
                         <li>二次开发海洋插件，支持根据风力动态调整海浪参数</li>
                         <li>实现船舶与海洋的运动记录与回放</li>
@@ -181,6 +184,8 @@
 
                 <div class="ProjectCard">
                     <h3>AI 数字人交互演示（2023.03–2023.05）</h3>
+                    <p> 数字人交互演示，需要与人语音交互，眼神交互，除了AI问答还需要处理一些简单操作。</p>
+                    <p> 我负责程序架构，整体流程搭建, 引擎版本升级。</p>
                     <ul>
                         <li>主导数字人演示系统，基于 MetaHuman + ChatGLM</li>
                         <li>初期构建远程 AI 问答流程：语音识别 → Chat → 语音合成 → 播放嘴型</li>
@@ -192,6 +197,8 @@
 
                 <div class="ProjectCard">
                     <h3>北京商飞 - 飞机模型演示系统（2022.08–2023.01）</h3>
+                    <p> 一个飞机的组装演示系统，可以自由拼接组装飞机。</p>
+                    <p> 我负责程序架构，整体流程搭建，本地AI、语音等各种后台服务搭建。</p>
                     <ul>
                         <li>使用 DataTable + InstancedStaticMesh 实现飞机自动生成与结构可视化</li>
                         <li>支持交互式参数修改与装备选择</li>
@@ -201,6 +208,8 @@
 
                 <div class="ProjectCard">
                     <h3>北京陆军航空兵学院 - VR 训练系统（2021.09–2022.09）</h3>
+                    <p> 为学院准备VR上课课件，三轴飞行器模拟平台。</p>
+                    <p> 我负责程序架构，数据收集，现场开发，模拟演示。</p>
                     <ul>
                         <li>为教学课目编写训练逻辑，实现学员端与教员端联动控制</li>
                         <li>接入飞行模拟器数据、支持实时同步学员操作与心率监控</li>
@@ -209,6 +218,8 @@
 
                 <div class="ProjectCard">
                     <h3>沈阳航空601所 - 无人机航母演示（2021.08–2021.10）</h3>
+                    <p> 为研究所布置无人机母舰运行流程，并拍摄无人机演示视频</p>
+                    <p> 我负责程序架构，整体流程搭建，视频录制。</p>
                     <ul>
                         <li>使用 LevelSequence 录制无人机起降、补给、维修完整流程</li>
                         <li>制作高质量航母 VR 展示视频，支持站位交互和自由视角切换</li>
@@ -217,6 +228,8 @@
 
                 <div class="ProjectCard">
                     <h3>北京航空301所 - 导弹演示系统（2021.07–2021.08）</h3>
+                    <p> 为研究所提供炮弹模型，拆解，发射演示。</p>
+                    <p> 我负责程序架构，整体流程搭建，现场封闭开发，VR演示。</p>
                     <ul>
                         <li>构建交互式军事基地，展示导弹结构与发射流程</li>
                         <li>使用 Timeline + Niagara 模拟发射路径与爆炸效果</li>
@@ -225,6 +238,8 @@
 
                 <div class="ProjectCard">
                     <h3>《救赎之地》（2018–2021）</h3>
+                    <P> 一款大逃杀MOBA手游，客户端使用UE4游戏，服务器是自建C++游戏服务器。</P>
+                    <P> 我负责多个模块客户端与服务器的联合开发</P>
                     <ul>
                         <li>英雄技能模块：技能释放、冷却、隐藏、锁定逻辑</li>
                         <li>战斗伤害系统：伤害计算、死亡判定、减伤增伤机制</li>
