--- a/index.html
+++ b/index.html
@@ -1,278 +1,36 @@
-﻿<!DOCTYPE html>
-<html lang="zh">
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>张靖宇 | UE Plugin Developer</title>
-    <link rel="stylesheet" href="Style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>张靖宇 - 个人简历</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+<header id="NavBar" style="display: none;">
+  <nav>
+    <ul>
+      <li data-page="about">基础信息</li>
+      <li data-page="projects">作品展示</li>
+      <li data-page="experience">工作经历</li>
+      <li data-page="blog">个人博客</li>
+      <li data-page="contact">合作说明</li>
+    </ul>
+  </nav>
+</header>
 
-<!-- 左侧按钮式导航 -->
-<nav class="SideNav">
-    <a href="#Welcome"           class="NavButton" data-color="#16a085"><span class="NavIcon">🏠</span><span class="NavText">主页</span></a>
-    <a href="#Showcase"          class="NavButton" data-color="#16a085"><span class="NavIcon">📦</span><span class="NavText">作品展示</span></a>
-    <a href="#SelfIntro"         class="NavButton" data-color="#2ecc71"><span class="NavIcon">👤</span><span class="NavText">自我介绍</span></a>
-    <a href="#Skills"            class="NavButton" data-color="#3498db"><span class="NavIcon">🚀</span><span class="NavText">个人优势</span></a>
-    <a href="#WorkExperience"    class="NavButton" data-color="#e74c3c"><span class="NavIcon">🏢</span><span class="NavText">工作经历</span></a>
-    <a href="#ProjectExperience" class="NavButton" data-color="#9b59b6"><span class="NavIcon">📂</span><span class="NavText">项目经历</span></a>
-    <a href="#Education"         class="NavButton" data-color="#f1c40f"><span class="NavIcon">🎓</span><span class="NavText">教育背景</span></a>
-    <a href="#Cooperation"       class="NavButton" data-color="#95a5a6"><span class="NavIcon">🤝</span><span class="NavText">合作说明</span></a>
-</nav>
+<main>
+  <div id="HeroArea" class="hero">
+    <h1>👋 你好，我是张靖宇</h1>
+    <p class="intro">一位专注于 <strong>UE 插件开发</strong> 与 <strong>Python 自动化</strong> 的自由开发者</p>
+    <p class="intro">擅长插件架构、AI 交互、VR 模拟等前沿方向</p>
+    <a href="#" onclick="switchToContent('about')" class="btn">了解更多 →</a>
+  </div>
 
-<!-- 右侧滚动内容 -->
-<main class="ContentArea" id="ContentArea">
-
-    <section class="SnapSection" id="Welcome">
-        <div class="WelcomeContent">
-        <p>我是张靖宇，一名专注于 Unreal Engine 插件开发 和 技术自动化 的开发者。</p>
-        <p>擅长将复杂问题模块化、结构化，曾服务于 VR、军事仿真、AI 交互等多个前沿项目，具有丰富的一线开发与系统架构经验。</p>
-        <p>现以自由开发者身份承接项目，目标是打造高质量、高适配度的技术组件。</p>
-    </div>
-    </section>
-
-    <section id="Showcase" class="SnapSection">
-        <h2>📦 作品展示</h2>
-
-        <!-- 分类标签 -->
-        <div class="ProjectTabs">
-            <button class="ProjectTab active" data-type="UEPlugins">🎮 UE 插件</button>
-            <button class="ProjectTab" data-type="PythonProjects">🐍 Python 项目</button>
-        </div>
-
-        <!-- 共用轮播区域 -->
-        <div class="ProjectCarousel">
-            <button class="ProjectNav" id="ShowcasePrev">❮</button>
-            <div class="ProjectSlides" id="ShowcaseSlides">
-                <div class="ProjectCard" data-type="UEPlugins">
-                    <h3>SimpleSSHTunnel</h3>
-                    <p>一个简单的SSH隧道插件</p>
-                    <p class="Award">🏷️ <a href="https://www.fab.com/zh-cn/listings/e86019ed-6e80-4f14-b70c-1fb2f0154721" target="_blank">点击打开Fab插件链接</a></p>
-                    <ul>
-                        <li>集成第三方libssh2+openssl搭建ssh加密隧道</li>
-                        <li>插件设置页面管理所有SSH通道，方便直观快捷</li>
-                        <li>纯C++编写，支持 Blueprint 快速调用</li>
-                        <li>适配 UE5.2~5.5</li>
-                        <li>仅支持win平台</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard" data-type="UEPlugins">
-                    <h3>SimpleByteConversion</h3>
-                    <p>一个简单的字节数组转换插件</p>
-                    <p class="Award">🏷️ <a href="https://www.fab.com/zh-cn/listings/ee68b12e-30b4-4904-8f80-3cc43c1e6002" target="_blank">点击打开Fab插件链接</a></p>
-                    <ul>
-                        <li>int、int64、bool、float、double、struct与字节数组互转，适用于存档与通信</li>
-                        <li>纯C++编写，支持 Blueprint 快速调用</li>
-                        <li>适配 UE5.2~5.5</li>
-                        <li>支持全平台</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard" data-type="PythonProjects">
-                    <h3>UEPluginAutoPacker</h3>
-                    <p>UE插件多版本一键打包器，解决多版本打包问题</p>
-                    <p class="Award">🐙 <a href="https://github.com/MZSH-Tools/UEPluginAutoPacker" target="_blank">点击打开Github项目页面</a></p>
-                    <ul>
-                        <li>自动打包多个 UE 插件版本，适用于上架</li>
-                        <li>支持添加管理计算机UE引擎版本，有缓存不用重复设置</li>
-                        <li>支持一键修改打包文件，满足Fab上架需求</li>
-                        <li>仅支持win平台</li>
-                    </ul>
-                </div>
-            </div>
-            <button class="ProjectNav" id="ShowcaseNext">❯</button>
-        </div>
-    </section>
-
-    <section id="SelfIntro" class="SnapSection">
-        <h2>👤 自我介绍</h2>
-        <ul>
-            <li>姓名：张靖宇</li>
-            <li>性别：男</li>
-            <li>籍贯：山西运城</li>
-            <li>年龄：<span id="Age"></span> 岁</li>
-            <li>工作经验：<span id="WorkYears"></span> 年</li>
-            <li>联系邮箱：<a href="mailto:mengzhishanghun@outlook.com" class="EmailLink">mengzhishanghun@outlook.com</a></li>
-        </ul>
-    </section>
-
-    <section id="Skills" class="SnapSection">
-        <h2>🚀 个人优势</h2>
-        <ul>
-            <li>精通 C++ 编程，具备扎实的数学、数据结构和算法基础，能高效解决底层性能与逻辑难题</li>
-            <li>深入理解 TCP/IP 协议栈，能独立开发 UE 插件并完成 TCP、UDP、SSH、HTTP 等通信功能的集成</li>
-            <li>Python 编程经验丰富，擅长脚本自动化、工具链开发，能快速构建开发辅助系统</li>
-            <li>熟练使用 MySQL、Oracle 等数据库，能够编写高效查询，设计稳定的数据交互结构</li>
-            <li>掌握 VS、Rider、CLion 等主流 IDE，熟悉断点调试、性能分析与代码质量控制</li>
-            <li>了解 ChatGPT 应用逻辑与前端 AI 接口，可结合大模型提升生产力与用户体验</li>
-            <li>版本管理能力强，精通 Git / SVN / Perforce，熟悉多人协作与权限配置流程</li>
-            <li>VR 硬件适配经验丰富，熟悉 Vive、Oculus、Pico 等主流设备部署与性能调优</li>
-            <li>精通 UE4 / UE5 引擎架构，熟悉渲染流程、插件机制、Windows / Android 打包与热更</li>
-            <li>熟悉 Gameplay 架构与组件系统，能够快速构建 VR 游戏流程，集成 Common UI 与 MassAI</li>
-            <li>独立完成多个商业插件开发，涵盖通信、打包、UI 管理、自动化工具等，具备 Fab 上架经验</li>
-            <li>具备虚拟人技术经验，熟悉 MetaHuman、动作捕捉、Lipsync 与虚拟拍摄流程</li>
-            <li>掌握性能优化与网络同步，熟悉源码修改、蓝图逻辑分离、调度优化等高级实践</li>
-        </ul>
-    </section>
-
-    <section id="WorkExperience" class="SnapSection">
-        <h2>🏢 工作经历</h2>
-
-        <h3>北京尼诺时空文化科技有限公司</h3>
-        <p>职位：Unreal 开发工程师 ｜<em>2023.02 – 2025.01</em></p>
-        <ul>
-            <li>主导搭建项目架构与底层逻辑，实现流程与功能模块解耦</li>
-            <li>为美术组和程序组提供 UE 插件与 Python 脚本工具，显著提升协作效率</li>
-            <li>完成引擎版本升级与 UE 源码定制化修改，适配多平台需求</li>
-            <li>负责项目的打包、部署与版本发布流程管理</li>
-        </ul>
-
-        <h3>北京弘宇飞拓科技有限公司 成都分公司</h3>
-        <p>职位：Unreal 开发工程师 ｜<em>2021.07 – 2023.01</em></p>
-        <ul>
-            <li>主导多个 VR 军事模拟与航空训练项目，从需求对接到功能实现全流程负责</li>
-            <li>实现训练模块、设备互动、飞行数据采集等核心逻辑</li>
-            <li>编写项目级技术框架，标准化接口与流程，支持多人协作与模块复用</li>
-        </ul>
-
-        <h3>北京悠米互动娱乐科技有限公司</h3>
-        <p>职位：Unreal 开发工程师 ｜<em>2018.08 – 2021.02</em></p>
-        <ul>
-            <li>核心参与 MOBA+吃鸡手游《救赎之地》的 UE 客户端系统开发</li>
-            <li>主导战斗系统、技能逻辑、交互模块、跳伞与同步系统的实现</li>
-            <li>优化客户端性能，提升渲染效率与操作流畅性</li>
-        </ul>
-    </section>
-
-    <section id="ProjectExperience" class="SnapSection">
-        <h2>📂 项目经历</h2>
-        <div class="ProjectCarousel">
-            <button class="ProjectNav" id="ProjectPrev">❮</button>
-            <div class="ProjectSlides" id="ProjectSlides">
-                <div class="ProjectCard">
-                    <h3>驾考模拟器自主学习系统（2023.02–2025.01）</h3>
-                    <p> 科目二三模拟考试教学系统，模拟教练教学帮助用户通过实际考试。</p>
-                    <p> 我负责程序架构，整体流程搭建，为美术、开发提供技术支持，引擎版本升级。</p>
-                    <ul>
-                        <li>配合六轴模拟器实现学员自主学习，目标为帮助通过驾考</li>
-                        <li>使用芬兰团队 XVP 车辆物理模型，模拟真实操作反馈</li>
-                        <li>主导搭建项目基础架构，将蓝图流程与底层逻辑彻底分离</li>
-                        <li>自研插件并接入 MassAI 和 MetaHuman，模拟真实路人环境</li>
-                        <li>改写引擎源码以实现三屏 Lumen 正常显示并修复曝光不一致问题</li>
-                        <li>成功接入 Common UI 模块，提升 UI 管理效率</li>
-                        <li>使用 LevelSequence 记录车辆运动轨迹并还原教学行为</li>
-                        <li>搭建教学流程录制/还原系统，结合 UI 文本和视频展示</li>
-                        <li>使用 UE 网络同步实现三机三屏联动渲染（最终未部署）</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard">
-                    <h3>海洋及船舶模拟系统（2024.05–2024.08）</h3>
-                    <p> 为剧组搭建海洋船舶模拟系统和虚拟拍照系统。</p>
-                    <p> 我负责程序架构，整体流程搭建，虚拟拍摄演示，现场开发，引擎版本升级。</p>
-                    <ul>
-                        <li>二次开发海洋插件，支持根据风力动态调整海浪参数</li>
-                        <li>实现船舶与海洋的运动记录与回放</li>
-                        <li>开发虚拟拍摄系统：结合 SteamVR、HTC、3D 打印控制器控制虚拟摄影机</li>
-                        <li>摄影系统支持打点、回放、录制、还原、移动速度调整等功能</li>
-                        <li>通过 LiveLink 将实时拍摄画面推送至平板供导演监控</li>
-                        <li>编写控制系统 UI，可动态调整风、天空、云层、时间、船舶质量等参数</li>
-                        <li>支持通过外接设备远程控制船舶的运动方向和转向</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard">
-                    <h3>AI 数字人交互演示（2023.03–2023.05）</h3>
-                    <p> 数字人交互演示，需要与人语音交互，眼神交互，除了AI问答还需要处理一些简单操作。</p>
-                    <p> 我负责程序架构，整体流程搭建, 引擎版本升级。</p>
-                    <ul>
-                        <li>主导数字人演示系统，基于 MetaHuman + ChatGLM</li>
-                        <li>初期构建远程 AI 问答流程：语音识别 → Chat → 语音合成 → 播放嘴型</li>
-                        <li>后期全部流程本地部署（ChatGLM + pyttsx3 + whisper）</li>
-                        <li>使用 Python + BAT 实现一键启动所有服务</li>
-                        <li>结合 Kinect + ControlRig 实现人体姿态捕捉，支持头部和眼神追踪</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard">
-                    <h3>北京商飞 - 飞机模型演示系统（2022.08–2023.01）</h3>
-                    <p> 一个飞机的组装演示系统，可以自由拼接组装飞机。</p>
-                    <p> 我负责程序架构，整体流程搭建，本地AI、语音等各种后台服务搭建。</p>
-                    <ul>
-                        <li>使用 DataTable + InstancedStaticMesh 实现飞机自动生成与结构可视化</li>
-                        <li>支持交互式参数修改与装备选择</li>
-                        <li>自动生成过程支持用户自定义结构参数调整，提高开发效率</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard">
-                    <h3>北京陆军航空兵学院 - VR 训练系统（2021.09–2022.09）</h3>
-                    <p> 为学院准备VR上课课件，三轴飞行器模拟平台。</p>
-                    <p> 我负责程序架构，数据收集，现场开发，模拟演示。</p>
-                    <ul>
-                        <li>为教学课目编写训练逻辑，实现学员端与教员端联动控制</li>
-                        <li>接入飞行模拟器数据、支持实时同步学员操作与心率监控</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard">
-                    <h3>沈阳航空601所 - 无人机航母演示（2021.08–2021.10）</h3>
-                    <p> 为研究所布置无人机母舰运行流程，并拍摄无人机演示视频</p>
-                    <p> 我负责程序架构，整体流程搭建，视频录制。</p>
-                    <ul>
-                        <li>使用 LevelSequence 录制无人机起降、补给、维修完整流程</li>
-                        <li>制作高质量航母 VR 展示视频，支持站位交互和自由视角切换</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard">
-                    <h3>北京航空301所 - 导弹演示系统（2021.07–2021.08）</h3>
-                    <p> 为研究所提供炮弹模型，拆解，发射演示。</p>
-                    <p> 我负责程序架构，整体流程搭建，现场封闭开发，VR演示。</p>
-                    <ul>
-                        <li>构建交互式军事基地，展示导弹结构与发射流程</li>
-                        <li>使用 Timeline + Niagara 模拟发射路径与爆炸效果</li>
-                    </ul>
-                </div>
-
-                <div class="ProjectCard">
-                    <h3>《救赎之地》（2018–2021）</h3>
-                    <P> 一款大逃杀MOBA手游，客户端使用UE4游戏，服务器是自建C++游戏服务器。</P>
-                    <P> 我负责多个模块客户端与服务器的联合开发</P>
-                    <ul>
-                        <li>英雄技能模块：技能释放、冷却、隐藏、锁定逻辑</li>
-                        <li>战斗伤害系统：伤害计算、死亡判定、减伤增伤机制</li>
-                        <li>掉落系统：场景内掉落与拾取逻辑</li>
-                        <li>交互系统：场景物品交互，如开门、开关、激活器等</li>
-                        <li>坐骑系统：坐骑控制与角色同步机制</li>
-                        <li>跳伞系统：实现单人 / 组队跳伞 + 同步跟随逻辑</li>
-                    </ul>
-                </div>
-            </div>
-            <button class="ProjectNav" id="ProjectNext">❯</button>
-        </div>
-    </section>
-
-    <section id="Education" class="SnapSection">
-        <h2>🎓 教育背景</h2>
-        <h3>重庆电子工程职业学院（2015 – 2018）</h3>
-        <p>专业：嵌入式技术与应用</p>
-        <p>主修课程：C语言程序设计、数据结构、网络通信技术、计算机硬件基础、电子技术、汇编语言程序设计</p>
-    </section>
-
-    <section id="Cooperation" class="SnapSection">
-        <h2>🤝 合作说明</h2>
-        <ul>
-            <li>可承接 UE 插件开发、蓝图 → C++ 转换、Python脚本开发 等任务</li>
-            <li>支持按功能 / 周期定制，可签订 NDA 与交付协议</li>
-            <li>交付内容包含源码 + 使用说明，确保交付后可维护性</li>
-            <li>提供长期技术支持与版本升级服务</li>
-            <li>联系邮箱：<a href="mailto:mengzhishanghun@outlook.com" class="EmailLink">mengzhishanghun@outlook.com</a></li>
-        </ul>
-    </section>
+  <div id="ContentArea" style="display: none;"></div>
 </main>
 
-<script src="Script.js"></script>
+<footer>© 2025 张靖宇 | mengzhishanghun.github.io</footer>
+<script src="js/main.js"></script>
 </body>
 </html>
