卡片布局修改

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>👋 你好，我是张靖宇</h1>
     <p class="intro">一位专注于 <strong>UE 插件开发</strong> 与 <strong>Python 自动化</strong> 的自由开发者</p>
     <p class="intro">擅长插件架构、AI 交互、VR 模拟等前沿方向</p>
-    <a href="#" onclick="switchToContent('about')" class="btn">了解更多 →</a>
+    <a href="#" onclick="switchToContent('about')" class="btn">了解更多</a>
   </div>
 
   <div id="ContentArea" style="display: none;"></div>
