个人信息修改

--- a/sections/about.html
+++ b/sections/about.html
@@ -2,8 +2,10 @@
   <!-- 📌 基础信息 -->
   <h3 style="margin-top:2rem;">📌 基础信息</h3>
   <ul class="InfoList">
-    <li><strong>籍贯：</strong>山西运城</li>
+    <li><strong>姓名：</strong>张靖宇</li>
+    <li><strong>性别：</strong>男</li>
     <li><strong>年龄：</strong><span id="Age"></span></li>
+    <li><strong>籍贯：</strong>山西运城</li>
     <li><strong>工作经验：</strong><span id="Experience"></span></li>
     <li><strong>毕业院校：</strong>重庆电子工程职业学院</li>
     <li><strong>专业：</strong>嵌入式技术与应用</li>
