--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </main>
 
 <footer>© 2025 张靖宇 | mengzhishanghun.github.io</footer>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
