--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 <footer>© <span id="Year"></span> 张靖宇 | mengzhishanghun.github.io</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<!-- ✅ markdown-it 主库和插件 -->
+<script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/markdown-it-emoji/dist/markdown-it-emoji.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/markdown-it-task-lists/dist/markdown-it-task-lists.min.js"></script>
+
 <script src="js/main.js"></script>
 </body>
 </html>
